correct overflowing

--- a/style.css
+++ b/style.css
@@ -567,7 +567,7 @@ header{
         font-size: 35px;
     }
     .take p{
-        margin-top: 85px;
+        margin-top: 95px;
         font-size: 16px;
     }
     .take button{
